<resources>
    <string name="app_name_main">ProbeView</string>
    <string name="app_name_host_connect">Connect to Host</string>
    <string name="app_name_device_connect">Connect to %1$s</string>
    <string name="app_name_settings">Settings</string>

    <string name="menu_item_host_connect">Host</string>
    <string name="menu_item_coil_connect">Coil</string>
    <string name="menu_item_probe_connect">Probe</string>
    <string name="menu_item_settings">Settings</string>

    <string name="button_device_connect">Connect</string>

    <string name="dialog_title_connect_error">Connection Error</string>
    <string name="dialog_title_disconnect_error">Disconnection Error</string>
    <string name="dialog_title_abort_error">Abort Error</string>

    <string name="dialog_title_connect">Connecting to</string>
    <string name="dialog_button_connect">Cancel</string>
    <string name="dialog_title_disconnect">Disconnecting</string>
    <string name="dialog_button_disconnect">Abort</string>

    <string name="dialog_title_bluetooth_on_error">Bluetooth On Error</string>
    <string name="dialog_description_bluetooth_on_error">
        Probe navigation disabled as Bluetooth is not turned on.
    </string>

    <string name="dialog_title_bluetooth_error">Bluetooth Permission Error</string>
    <string name="dialog_description_bluetooth_error">
        Probe navigation disabled as Bluetooth permission is not granted.
    </string>

    <string name="textview_coil_location">Coil: %1$s</string>
    <string name="textview_probe_location">Probe: %1$s</string>
    <string name="textview_imu_data">IMU: %1$s</string>
    <string name="textview_gpio_data">GPIO: %1$s</string>
    <string name="textview_coil_location_as_position">Position: %1$s</string>
    <string name="textview_probe_location_as_angle">Angle: %1$s</string>

    <string name="textview_coil_position">Coil Position (X,Y,Z):</string>
    <string name="textview_coil_angle">Coil Angle (X,Y,Z):</string>
    <string name="textview_probe_position">Probe Position (X,Y,Z):</string>
    <string name="textview_probe_angle">Probe Angle (X,Y,Z):</string>
    <string name="textview_scan_image_server">Scan Image Server:</string>
    <string name="textview_power_control_server">Power Control Server:</string>

    <string name="tips_coil_position_x">Pos X</string>
    <string name="tips_coil_position_y">Pos Y</string>
    <string name="tips_coil_position_z">Pos Z</string>
    <string name="tips_coil_angle_x">Angle X</string>
    <string name="tips_coil_angle_y">Angle Y</string>
    <string name="tips_coil_angle_z">Angle Z</string>

    <string name="tips_probe_position_x">Pos X</string>
    <string name="tips_probe_position_y">Pos Y</string>
    <string name="tips_probe_position_z">Pos Z</string>
    <string name="tips_probe_angle_x">Angle X</string>
    <string name="tips_probe_angle_y">Angle Y</string>
    <string name="tips_probe_angle_z">Angle Z</string>

    <string name="tips_scan_image_server">Enter scan image server address</string>
    <string name="tips_power_control_server">Enter power control server address</string>
</resources>