<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_host_connect"
        android:icon="@drawable/ic_baseline_desktop_access_disabled_24"
        android:title="@string/menu_item_host_connect"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_coil_connect"
        android:icon="@drawable/ic_baseline_grid_off_24"
        android:title="@string/menu_item_coil_connect"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_probe_connect"
        android:icon="@drawable/ic_baseline_flashlight_off_24"
        android:title="@string/menu_item_probe_connect"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_settings"
        android:title="@string/menu_item_settings"
        app:showAsAction="never" />
</menu>